Added new CSS selectors

--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
     <meta property="og:title" content="Okotoks Pizza">
     <meta property="og:site_name" content="Okotoks Pizza">
 
+    <link rel="stylesheet" href="css/style.css" class="">
+
     <meta name="author" content="Chris">
     <title>Okotoks Pizza</title>
 </head>
 <body>
     <nav>
         <div class="nav">
-            <a href="index.html" class="">Home</a>
-            <a href="pages/gallery.html" class="">Gallery</a>
-            <a href="pages/contact.html" class="">Contact</a>
-            <a href="https://www.yelp.ca/biz/nikos-pizza-calgary?osq=Pizza" class="">Yelp</a>
+            <ul>
+                <li><a href="index.html" class="">Home</a></li>
+                <li><a href="pages/gallery.html" class="">Gallery</a></li>
+                <li><a href="pages/contact.html" class="">Contact</a></li>
+                <li><a href="https://www.yelp.ca/biz/nikos-pizza-calgary?osq=Pizza" class="">Yelp</a></li>
+            </ul>
+            
+        
         </div>
     </nav>
 <header>
