Added fancy transition effects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css" class="">
 
     <meta name="author" content="Chris">
-    <title>Okotoks Pizza</title>
+    <title >Okotoks Pizza</title>
 </head>
 <body>
     <div class="container">
@@ -21,10 +21,10 @@
     <nav>
         <div class="nav">
             <ul>
-                <li><a href="index.html" class="">Home</a></li>
-                <li><a href="pages/gallery.html" class="">Gallery</a></li>
-                <li><a href="pages/contact.html" class="">Contact</a></li>
-                <li><a href="https://www.yelp.ca/biz/nikos-pizza-calgary?osq=Pizza" class="">Yelp</a></li>
+                <li class="link-box"><a href="index.html" >Home</a></li>
+                <li class="link-box"><a href="pages/gallery.html" class="">Gallery</a></li>
+                <li class="link-box"><a href="pages/contact.html" class="">Contact</a></li>
+                <li class="link-box"><a href="https://www.yelp.ca/biz/nikos-pizza-calgary?osq=Pizza" class="">Yelp</a></li>
             </ul>
             
         
@@ -32,11 +32,11 @@
     </nav>
 <header>
     <div class="">
-        <h1 class="">Okotoks Pizza</h1>
+        <h1 class="bigtext">Okotoks Pizza</h1>
     </div>
 </header>
 
-    <article class="">
+    <article class="article">
         <p>There are no shortcuts when it comes to our passion. We pull out all the stops, giving you the ‘wow’ flavour, experience and consistency you not only want, but deserve. Our customers keep coming back, again, again, and again.
 
             We’re a small but nimble family-run take out and delivery pizza shop in Okotoks, Alberta. When we’re not scouring the globe (okay, the prairies) for the freshest, ripest and boldest ingredients, we’re crafting perfect pizzas for you and your family to enjoy. From hot Hawaiians and classic Canadians to crispy wings and decadent fudge brownies, everything at Okotoks Pizza is baked with love.
