Added responsive media queries to style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </article>
     <section class="movie">
         <div class="vidbox">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SDpCzJw2xm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="pizzavideo" src="https://www.youtube.com/embed/SDpCzJw2xm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
  <section class="section-photos">
