Converted CSS files to SCSS files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Okotoks Pizza">
     <meta property="og:site_name" content="Okotoks Pizza">
 
-    <link rel="stylesheet" href="css/style.css" class="">
+    <link rel="stylesheet" href="scss/style.css" class="">
 
     <meta name="author" content="Chris">
     <title >Okotoks Pizza</title>
